<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/navy_blue22"

            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/navy_blue22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_login_to_continue_using_app" />

        <androidx.appcompat.widget.AppCompatEditText
            android:background="@drawable/edit_text_background"
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:background="@drawable/edit_text_background"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_primary"
            android:textColor="@color/white"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/btnSignUp"
            android:textColor="@color/navy_blue22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:text="@string/don_t_have_an_account_signup" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="285dp"
        android:layout_height="253dp"
        android:layout_marginStart="200dp"
        android:layout_marginBottom="576dp"
        android:contentDescription="@string/quiz_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blob3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="392dp"
        android:layout_height="270dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="160dp"
        android:contentDescription="@string/quiz_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blob3" />


</androidx.constraintlayout.widget.ConstraintLayout>