<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="405dp"
        android:layout_height="422dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/navy_blue22" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_your_email_and_password_to_get_access_to_your_account"
            android:textColor="@color/navy_blue22" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_primary"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btnLog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="@color/navy_blue22" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="366dp"
        android:layout_height="208dp"
        android:layout_marginStart="152dp"
        android:layout_marginBottom="588dp"
        android:contentDescription="@string/quiz_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blob3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="392dp"
        android:layout_height="270dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="160dp"
        android:contentDescription="@string/quiz_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blob3" />


</androidx.constraintlayout.widget.ConstraintLayout>