<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginIntro">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="353dp"
        android:layout_height="540dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="132dp"
        android:contentDescription="@string/quiz_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blob3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="215dp"
        android:layout_marginTop="136dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quiz_logo"
        android:contentDescription="@string/quiz_logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="cursive"
        android:text="@string/welcome_to_the_quiz"
        android:textColor="#172B73"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/login_intro"
        android:layout_width="348dp"
        android:layout_height="48dp"
        android:layout_marginBottom="160dp"
        android:backgroundTint="#172B73"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="310dp"
        android:layout_height="450dp"
        android:layout_marginStart="192dp"
        android:layout_marginBottom="476dp"
        android:contentDescription="@string/quiz_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/blob3" />


</androidx.constraintlayout.widget.ConstraintLayout>