<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".QuestionActivity">

    <TextView
        android:id="@+id/countDown"
        android:layout_width="95dp"
        android:layout_height="143dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/_00_25"
        android:textAlignment="center"
        android:textSize="24sp"
        app:drawableTopCompat="@drawable/stopwatch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/textview"
        android:textColor="@color/navy_blue22"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPrevious"
        android:layout_width="154dp"
        android:layout_height="49dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:text="@string/previous"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="159dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:text="@string/next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/optionList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/btn_primary"
        android:textColor="@color/white"
        android:text="Submit"
        android:textAllCaps="false"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>